objects/TW1_Fraldario__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Dependente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependente</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Esse cliente não possui dependentes cadastrados.</errorMessage>
            <filterItems>
                <field>$Source.TW1_Nome_do_Cliente__c</field>
                <operation>equals</operation>
                <valueField>TW1_Dependente__c.TW1_Conta_Associada__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TW1_Dependente__c</referenceTo>
        <relationshipLabel>Fraldário</relationshipLabel>
        <relationshipName>Frald_rio</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Itens__c</fullName>
        <label>Itens</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimentação</fullName>
                </value>
                <value>
                    <fullName>Amamentação</fullName>
                </value>
                <value>
                    <fullName>Banheiro Infantil</fullName>
                </value>
                <value>
                    <fullName>Bebedouro/Lavar as Mãos</fullName>
                </value>
                <value>
                    <fullName>Ducha</fullName>
                </value>
                <value>
                    <fullName>Fralda</fullName>
                </value>
                <value>
                    <fullName>Microondas</fullName>
                </value>
                <value>
                    <fullName>Trocador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Fraldário</relationshipLabel>
        <relationshipName>Frald_rio</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fraldário</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Nome_do_Cliente__c</columns>
        <columns>TW1_Data__c</columns>
        <columns>TW1_Dependente__c</columns>
        <columns>TW1_Itens__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraldário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>